inou/prp/tests/errors/mod_missing_cycle.prp
/*
:name: mod_missing_cycle
:type: error
:error: declares no landing cycle
:help: combinational feedthrough
*/

mod f(a:u8) -> (x:u8) { x = a }   // locate_error_here
